--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ weight = 2
 
 [[menu.main]]
 URL = "blog"
-name = "My Photos"
+name = "Gallery"
 weight = 3
 
 [[menu.main]]
@@ -64,7 +64,7 @@ email = "adityasinghdrdo@gmail.com"
 address = "IIIT Hyderabad, Gachibowli-Area, Hyderabad, India"
 # meta description
 author = "Aditya Kumar Singh"
-description = "This is meta description"
+description = "A Data Fanatic"
 # google analytics
 google_analytics_id = "" # Your ID
 # copyright
@@ -79,29 +79,22 @@ preloader = "images/preloader.gif" # use png, jpg, svg or gif format
 # contact
 [params.contact]
 enable = true
-form_action = "#" # contact form works with : https://formspree.io
+form_action = "https://formspree.io/f/myylboak" # contact form works with : https://formspree.io
 
 # google map
 [params.map]
 enable = true
 gmap_api = "https://maps.googleapis.com/maps/api/js?key=&#038;types=(cities)&#038;libraries=places&#038;language=en"
-map_latitude = "51.5223477"
-map_longitude = "-0.1622023"
+map_latitude = "17.596298100645598" 
+# 17.596298100645598, 78.1232546786667
+map_longitude = "78.1232546786667"
 map_marker = "images/marker.png"
-
 # cookies
 [params.cookies]
 enable = true
 expire_days = 2
 
 # social site
-[[params.social]]
-icon = "ti-facebook"
-URL = "https://www.facebook.com/RodoAditya/"
-
-[[params.social]]
-icon = "ti-instagram"
-URL = "https://www.instagram.com/rodosingh/"
 
 [[params.social]]
 icon = "ti-twitter-alt"
@@ -118,3 +111,15 @@ URL = "https://github.com/rodosingh"
 [[params.email_icon]]
 icon = "ti-github"
 URL = "https://github.com/rodosingh"
+
+[[params.social]]
+icon = "ti-facebook"
+URL = "https://www.facebook.com/RodoAditya/"
+
+[[params.social]]
+icon = "ti-instagram"
+URL = "https://www.instagram.com/rodosingh/"
+
+[[params.social]]
+icon = "ti-music-alt"
+URL = "https://open.spotify.com/user/312ybkhvukb4xot5q675x2kwkp6m"
