--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,13 +1,18 @@
 # banner
 banner:
-  title : "<br>Hey<span style = 'color:#33ff33'>!</span> I’m Aditya <br> <span style = 'font-size:30px;color:#979797'>A Data Scientist & Product Enthusiast</span>"
+  title : "Hey<span style = 'color:#33ff33'>!</span>
+  I’m Aditya <br> <span style = 'font-size:30px;color:#979797'>A Data Scientist &
+  Product Enthusiast</span>"
 
 # about
 about:
   enable : true
-  content : "A college graduate with a strong Mathematical & Computing background and experience in exploratory data analysis, machine learning, and statistics. Am very passionate about learning new topics in data science, 
-  visualizing data, and doing research. I like sharing valuable insights and making an impact that helps others learn to code, visualize, and narrate confidently what they accomplished. Frequent competitor at Kaggle competitions. 
-  I’m always open for discussions, so feel free to ask any questions or concerns, I will."
+  content : "I'm a <b>TECH-GEEK</b> with a strong Mathematical & Computing background. I've intermediary
+  experience in statistics, machine learning, and deep learning. Am very passionate about state-of-the-art
+  techniques in data science and computer vision. I like sharing valuable insights and
+  making an impact that helps others learn to code, visualize, and narrate confidently what they
+  accomplished. Frequent competitor at Kaggle competitions. I'm always open for discussions, so feel
+  free to ask any querry or concerns."
   button:
     enable : true
     label : "know more"
@@ -95,17 +100,23 @@ service:
   item:
     - title : "Image Analysis & Processing"
       icon : "ti-image"
-      content : "Extraction of meaningful information from digital images by means of digital image processing techniques like 2D object recognition, video tracking, image segmentation, medical scan analysis, 3D Pose Estimation."
+      content : "Extraction of meaningful information from digital images
+      by means of digital image processing techniques like 2D object recognition, video tracking,
+      image segmentation, medical scan analysis, 3D Pose Estimation."
       highlighted : false
 
     - title : "Data Analysis & Visualization"
       icon : "ti-bar-chart"
-      content : "Analyze data and use the derived information to arrive at a good business decision with specialized software and system. Also visualize the same graphically in the form of pictorial or graphical format(Example: charts, graphs, and maps)."
+      content : "Analyze data and use the derived information to arrive at a good business decision
+      with specialized software and system. Also visualize the same graphically in the form of pictorial
+      or graphical format(Example: charts, graphs, and maps)."
       highlighted : true
 
     - title : "Modeling E2E ML Pipelines "
       icon : "ti-loop"
-      content : "Codify and automate the machine learning workflow in an End-to-End fashion.<br> Consists of multiple sequential steps that do everything from data and feature extraction, pre-processing to model training and deployment. "
+      content : "Codify and automate the machine learning workflow in an End-to-End fashion.<br>
+      Consists of multiple sequential steps that do everything from data and feature extraction,
+      pre-processing to model training and deployment. "
       highlighted : false
 
 # blog
@@ -118,7 +129,7 @@ blog:
 # portfolio
 portfolio:
   enable : true
-  title : "My Photos"
+  title : "Gallery"
   item_show : 5
   URL : "portfolio"
   # portfolio item comes from 'data/portfolio.yml' item.
@@ -131,17 +142,27 @@ testimonial:
     - name : "Jesica Gomez"
       image : "images/testimonial/client-1.png"
       designation : "CEO, Funder"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut
+      aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur."
       
     - name : "Shirley Scot"
       image : "images/testimonial/client-1.png"
       designation : "CEO, Funder"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
       
     - name : "Jessica Julie"
       image : "images/testimonial/client-1.png"
       designation : "CEO, Funder"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
 
 # client logo slider
 clients_logo_slider:
