--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -7,7 +7,7 @@ banner:
 # about
 about:
   enable : true
-  content : "I'm a <b>TECH-GEEK</b> with a strong Mathematical & Computing background. I've intermediary
+  content : "Am a <b>`TECH-GEEK`</b> with a strong Mathematical & Computing background. I've intermediary
   experience in statistics, machine learning, and deep learning. Am very passionate about state-of-the-art
   techniques in data science and computer vision. I like sharing valuable insights and
   making an impact that helps others learn to code, visualize, and narrate confidently what they
