--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ map_longitude = "78.1232546786667"
 map_marker = "images/marker.png"
 # cookies
 [params.cookies]
-enable = true
+enable = false
 expire_days = 2
 
 # social site
