Temporary Change Fixed with New PRELOADER

--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ weight = 4
 home = "Home"
 logo = "images/favicon_rodo.png"
 #cv-URL
-cv_url = "https://github.com/blob"
+cv_url = "https://drive.google.com/file/d/1ZA6Yhob0kGXXqO-JJoKVWMl6j6fM-uUN/view?usp=sharing"
 # theme color
 theme_color = "#001a33"
 # contact info
